--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "dev:be": "nodemon --watch ./be-src/index.ts  --exec ts-node ./be-src/index.ts",
+    "sync": "ts-node ./be-src/db/sync.ts",
     "dev:fe": "",
     "build:be": "tsc",
     "build:fe": "tsc",
