--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^9.0.7",
+    "@vaadin/router": "^1.7.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "nanoid": "3",
     "nodemon": "^3.0.3",
+    "parcel": "^2.12.0",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "ts-node": "^10.9.2",
@@ -26,10 +28,10 @@
   },
   "scripts": {
     "dev:be": "nodemon --watch ./be-src/index.ts  --exec ts-node ./be-src/index.ts",
-    "sync": "ts-node ./be-src/db/sync.ts",
-    "dev:fe": "",
     "build:be": "tsc",
-    "build:fe": "tsc",
+    "sync": "ts-node ./be-src/db/sync.ts",
+    "dev:fe": "parcel ./fe-src/index.html --dist-dir ./fe-dist",
+    "build:fe": "parcel build ./fe-src/index.html --dist-dir ./fe-build",
     "start": "node ./build/index.js"
   }
 }
