--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vaadin/router": "^1.7.5",
     "algoliasearch": "v4",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
