--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mapbox-gl": "^3.7.0",
     "nanoid": "3",
     "nodemon": "^3.0.3",
     "parcel": "^2.12.0",
@@ -36,5 +37,18 @@
     "build:fe": "parcel build ./fe-src/index.html --dist-dir ./fe-build",
     "start": "node ./build/index.js",
     "algolia": "ts-node ./be-src/db/algolia.ts"
+  },
+  "devDependencies": {
+    "buffer": "^5.5.0||^6.0.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
+    "https-browserify": "^1.0.0",
+    "path-browserify": "^1.0.0",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.1.0",
+    "url": "^0.11.0",
+    "vm-browserify": "^1.1.2"
   }
 }
