--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dropzone": "^5.7.8",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/moment": "^2.13.0",
@@ -18,6 +19,7 @@
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dropzone": "^6.0.0-beta.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^3.7.0",
