--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.0.3",
     "parcel": "^2.12.0",
     "pg": "^8.11.3",
+    "resend": "^4.0.1",
     "sequelize": "^6.35.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
