--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "sync": "ts-node ./be-src/db/sync.ts",
     "dev:fe": "parcel ./fe-src/index.html --dist-dir ./fe-dist",
     "build:fe": "parcel build ./fe-src/index.html --dist-dir ./fe-build",
-    "start": "node ./be-build/index.js",
+    "start": "node ../be-build/index.js",
     "algolia": "ts-node ./be-src/db/algolia.ts"
   },
   "devDependencies": {
